--- a/animal-chipping-front/src/app/animal/animal.component.html
+++ b/animal-chipping-front/src/app/animal/animal.component.html
@@ -2,9 +2,9 @@
     <div class="container border p-4">
         <h3>Get an Animal</h3>
         <form [formGroup]="findForm" (ngSubmit)="findAnimal()">
-            <div class="form-group">
-                <label for="animalId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="animalId" formControlName="animalId" placeholder="Enter animal ID">
+                <label for="animalId">ID</label>
             </div>
             <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -29,33 +29,33 @@
     <div class="container border p-4">
         <h3>Add an Animal</h3>
         <form [formGroup]="addForm" (ngSubmit)="addAnimal()">
-            <div class="form-group">
-                <label for="weight">weight</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="weight" formControlName="weight" placeholder="Enter animal weight">
+                <label for="weight">weight</label>
             </div>
-            <div class="form-group">
-                <label for="length">length</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="length" formControlName="length" placeholder="Enter animal length">
+                <label for="length">length</label>
             </div>
-            <div class="form-group">
-                <label for="height">height</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="height" formControlName="height" placeholder="Enter animal height">
+                <label for="height">height</label>
             </div>
-            <div class="form-group">
-                <label for="gender">gender</label>
+            <div class="form-floating my-3">
                 <input type="text" class="form-control" id="gender" formControlName="gender" placeholder="Enter animal gender">
+                <label for="gender">gender</label>
             </div>
-            <div class="form-group">
-                <label for="chipperId">chipperId</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="chipperId" formControlName="chipperId" placeholder="Enter chipper ID">
+                <label for="chipperId">chipperId</label>
             </div>
-            <div class="form-group">
-                <label for="chippingLocationId">chippingLocationId</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="chippingLocationId" formControlName="chippingLocationId" placeholder="Enter chipping Location ID">
+                <label for="chippingLocationId">chippingLocationId</label>
             </div>
-            <div class="form-group">
-                <label for="animalTypes">animalTypes</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="animalTypes" formControlName="animalTypes" placeholder="Enter animal type">
+                <label for="animalTypes">animalTypes</label>
             </div>
             <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -80,37 +80,37 @@
     <div class="container border p-4">
         <h3>Update an Animal</h3>
         <form [formGroup]="updateForm" (ngSubmit)="updateAnimal()">
-            <div class="form-group">
-                <label for="animalId">animalId</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="animalId" formControlName="animalId" placeholder="Enter animal ID">
+                <label for="animalId">animalId</label>
             </div>
-            <div class="form-group">
-                <label for="weight">weight</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="weight" formControlName="weight" placeholder="Enter animal weight">
+                <label for="weight">weight</label>
             </div>
-            <div class="form-group">
-                <label for="length">length</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="length" formControlName="length" placeholder="Enter animal length">
+                <label for="length">length</label>
             </div>
-            <div class="form-group">
-                <label for="height">height</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="height" formControlName="height" placeholder="Enter animal height">
+                <label for="height">height</label>
             </div>
-            <div class="form-group">
-                <label for="gender">gender</label>
+            <div class="form-floating my-3">
                 <input type="text" class="form-control" id="gender" formControlName="gender" placeholder="Enter animal gender">
+                <label for="gender">gender</label>
             </div>
-            <div class="form-group">
-                <label for="lifeStatus">lifeStatus</label>
+            <div class="form-floating my-3">
                 <input type="text" class="form-control" id="lifeStatus" formControlName="lifeStatus" placeholder="Enter animal life status">
+                <label for="lifeStatus">lifeStatus</label>
             </div>
-            <div class="form-group">
-                <label for="chipperId">chipperId</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="chipperId" formControlName="chipperId" placeholder="Enter chipper ID">
+                <label for="chipperId">chipperId</label>
             </div>
-            <div class="form-group">
-                <label for="chippingLocationId">chippingLocationId</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="chippingLocationId" formControlName="chippingLocationId" placeholder="Enter chipping Location ID">
+                <label for="chippingLocationId">chippingLocationId</label>
             </div>
             <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -135,9 +135,9 @@
     <div class="container border p-4">
         <h3>Delete an Animal</h3>
         <form [formGroup]="deleteForm" (ngSubmit)="deleteAnimal()">
-            <div class="form-group">
-                <label for="animalId">ID</label>
+            <div class="form-floating my-3">
                 <input type="text" class="form-control" id="animalId" formControlName="animalId" placeholder="Enter animal ID">
+                <label for="animalId">ID</label>
             </div>
             <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
             <div class="alert alert-success mt-3" role="alert" *ngIf="isAnimalDeleted">
