--- a/animal-chipping-front/src/app/location/location.component.html
+++ b/animal-chipping-front/src/app/location/location.component.html
@@ -2,9 +2,9 @@
     <div class="container border p-4">
         <h3>Get a Location</h3>
         <form [formGroup]="findForm" (ngSubmit)="findLocation()">
-            <div class="form-group">
-                <label for="locationId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
+                <label for="locationId">ID</label>
             </div>
             <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -20,13 +20,13 @@
     <div class="container border p-4">
         <h3>Add a Location</h3>
         <form [formGroup]="addForm" (ngSubmit)="addLocation()">
-            <div class="form-group">
-                <label for="latitude">latitude</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="latitude" formControlName="latitude" placeholder="Enter Location latitude">
+                <label for="latitude">latitude</label>
             </div>
-            <div class="form-group">
-                <label for="longitude">longitude</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="longitude" formControlName="longitude" placeholder="Enter Location longitude">
+                <label for="longitude">longitude</label>
             </div>
             <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -42,17 +42,17 @@
     <div class="container border p-4">
         <h3>Update an Location</h3>
         <form [formGroup]="updateForm" (ngSubmit)="updateLocation()">
-            <div class="form-group">
-                <label for="locationId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
+                <label for="locationId">ID</label>
             </div>
-            <div class="form-group">
-                <label for="latitude">latitude</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="latitude" formControlName="latitude" placeholder="Enter Location latitude">
+                <label for="latitude">latitude</label>
             </div>
-            <div class="form-group">
-                <label for="longitude">longitude</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="longitude" formControlName="longitude" placeholder="Enter Location longitude">
+                <label for="longitude">longitude</label>
             </div>
             <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -68,9 +68,9 @@
     <div class="container border p-4">
         <h3>Delete an Location</h3>
         <form [formGroup]="deleteForm" (ngSubmit)="deleteLocation()">
-            <div class="form-group">
-                <label for="locationId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
+                <label for="locationId">ID</label>
             </div>
             <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
             <div class="alert alert-success mt-3" role="alert" *ngIf="isLocationDeleted">
