--- a/animal-chipping-front/src/app/visited-location/visited-location.component.html
+++ b/animal-chipping-front/src/app/visited-location/visited-location.component.html
@@ -2,13 +2,13 @@
     <div class="container border p-4">
         <h3>Add a Visited location</h3>
         <form [formGroup]="addForm" (ngSubmit)="addVisitedLocation()">
-            <div class="form-group">
-                <label for="animalId">Animal ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="animalId" formControlName="animalId" placeholder="Enter Animal ID">
+                <label for="animalId">Animal ID</label>
             </div>
-            <div class="form-group">
-                <label for="locationId">Location ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Visited location ID">
+                <label for="locationId">Location ID</label>
             </div>
             <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -24,17 +24,17 @@
     <div class="container border p-4">
         <h3>Update a Visited location</h3>
         <form [formGroup]="updateForm" (ngSubmit)="updateVisitedLocation()">
-            <div class="form-group">
-                <label for="animalId">Animal ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="animalId" formControlName="animalId" placeholder="Enter Animal ID">
+                <label for="animalId">Animal ID</label>
             </div>
-            <div class="form-group">
-                <label for="visitedLocationId">Visited Location ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="visitedLocationId" formControlName="visitedLocationId" placeholder="Enter Visited location ID">
+                <label for="visitedLocationId">Visited Location ID</label>
             </div>
-            <div class="form-group">
-                <label for="locationId">Location ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
+                <label for="locationId">Location ID</label>
             </div>
             <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -50,9 +50,9 @@
     <div class="container border p-4">
         <h3>Delete an Visited location</h3>
         <form [formGroup]="deleteForm" (ngSubmit)="deleteVisitedLocation()">
-            <div class="form-group">
-                <label for="visitedLocationId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="visitedLocationId" formControlName="visitedLocationId" placeholder="Enter Visited location ID">
+                <label for="visitedLocationId">ID</label>
             </div>
             <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
             <div class="alert alert-success mt-3" role="alert" *ngIf="isVisitedLocationDeleted">
