--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -1,69 +1,103 @@
 <div class="container d-flex">
-    <div class="container border p-4">
-        <h3>Find an Account</h3>
-        <form [formGroup]="findForm" (ngSubmit)="findAccount()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="accountId" formControlName="accountId" placeholder="Enter ID">
-                <label for="accountId">ID</label>
+    <div class="accordion w-50" id="acoountAccordion">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Find an Account
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#acoountAccordion">
+                <div class="accordion-body">
+                    <form [formGroup]="findForm" (ngSubmit)="findAccount()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="accountId" formControlName="accountId"
+                                placeholder="Enter ID">
+                            <label for="accountId">ID</label>
+                        </div>
+                        <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="foundedAccount">
+                        <div class="card-header">id: {{foundedAccount.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">First name: {{foundedAccount.firstName}}</li>
+                            <li class="list-group-item">Last name: {{foundedAccount.lastName}}</li>
+                            <li class="list-group-item">email: {{foundedAccount.email}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="foundedAccount">
-            <div class="card-header">id: {{foundedAccount.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">First name: {{foundedAccount.firstName}}</li>
-                <li class="list-group-item">Last name: {{foundedAccount.lastName}}</li>
-                <li class="list-group-item">email: {{foundedAccount.email}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Update an Account</h3>
-        <form [formGroup]="updateForm" (ngSubmit)="updateAccount()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="accountId" formControlName="accountId" placeholder="Enter account ID">
-                <label for="accountId">ID</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Update an Account
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
+                <div class="accordion-body">
+                    <form [formGroup]="updateForm" (ngSubmit)="updateAccount()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="accountId" formControlName="accountId"
+                                placeholder="Enter account ID">
+                            <label for="accountId">ID</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="text" class="form-control" id="firstName" formControlName="firstName"
+                                placeholder="Enter First Name">
+                            <label for="firstName">First Name</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="text" class="form-control" id="lastName" formControlName="lastName"
+                                placeholder="Enter Last Name">
+                            <label for="lastName">Last Name</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="email" class="form-control" id="email" formControlName="email"
+                                placeholder="Enter Email">
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="password" class="form-control" id="password" formControlName="password"
+                                placeholder="Enter Password">
+                            <label for="password">Password</label>
+                        </div>
+                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="updatedAccount">
+                        <div class="card-header">id: {{updatedAccount.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">First name: {{updatedAccount.firstName}}</li>
+                            <li class="list-group-item">Last name: {{updatedAccount.lastName}}</li>
+                            <li class="list-group-item">email: {{updatedAccount.email}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating my-3">
-                <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="Enter First Name">
-                <label for="firstName">First Name</label>
-            </div>
-            <div class="form-floating my-3">
-                <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Enter Last Name">
-                <label for="lastName">Last Name</label>
-            </div>
-            <div class="form-floating my-3">
-                <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter Email">
-                <label for="email">Email</label>
-            </div>
-            <div class="form-floating my-3">
-                <input type="password" class="form-control" id="password" formControlName="password" placeholder="Enter Password">
-                <label for="password">Password</label>
-            </div>
-            <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="updatedAccount">
-            <div class="card-header">id: {{updatedAccount.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">First name: {{updatedAccount.firstName}}</li>
-                <li class="list-group-item">Last name: {{updatedAccount.lastName}}</li>
-                <li class="list-group-item">email: {{updatedAccount.email}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Delete an Account</h3>
-        <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="accountId" formControlName="accountId" placeholder="Enter ID">
-                <label for="accountId">ID</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Delete an Account
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
+                <div class="accordion-body">
+                    <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="accountId" formControlName="accountId"
+                                placeholder="Enter ID">
+                            <label for="accountId">ID</label>
+                        </div>
+                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <div class="alert alert-success mt-3" role="alert" *ngIf="isAccountDeleted">
+                            Account has been deleted!
+                        </div>
+                    </form>
+                </div>
             </div>
-            <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-            <div class="alert alert-success mt-3" role="alert" *ngIf="isAccountDeleted">
-                Account has been deleted!
-            </div>
-        </form>
+        </div>
     </div>
 </div>
