--- a/animal-chipping-front/src/app/animal-type/animal-type.component.html
+++ b/animal-chipping-front/src/app/animal-type/animal-type.component.html
@@ -1,70 +1,110 @@
 <div class="container d-flex">
-    <div class="container border p-4">
-        <h3>Get an Animal type</h3>
-        <form [formGroup]="findForm" (ngSubmit)="findAnimalType()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="typeId" formControlName="typeId" placeholder="Enter animal type ID">
-                <label for="typeId">ID</label>
+    <div class="accordion w-50" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Get an Animal type
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="findForm" (ngSubmit)="findAnimalType()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="typeId" formControlName="typeId"
+                                placeholder="Enter animal type ID">
+                            <label for="typeId">ID</label>
+                        </div>
+                        <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="foundedAnimalType">
+                        <div class="card-header">id: {{foundedAnimalType.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">type: {{foundedAnimalType.type}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="foundedAnimalType">
-            <div class="card-header">id: {{foundedAnimalType.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">type: {{foundedAnimalType.type}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Add an Animal type</h3>
-        <form [formGroup]="addForm" (ngSubmit)="addAnimalType()">
-            <div class="form-floating my-3">
-                <input type="text" class="form-control" id="type" formControlName="type" placeholder="Enter animal type">
-                <label for="type">type</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Add an Animal type
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="addForm" (ngSubmit)="addAnimalType()">
+                        <div class="form-floating my-3">
+                            <input type="text" class="form-control" id="type" formControlName="type"
+                                placeholder="Enter animal type">
+                            <label for="type">type</label>
+                        </div>
+                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="addedAnimalType">
+                        <div class="card-header">id: {{addedAnimalType.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">type: {{addedAnimalType.type}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="addedAnimalType">
-            <div class="card-header">id: {{addedAnimalType.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">type: {{addedAnimalType.type}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Update an Animal type</h3>
-        <form [formGroup]="updateForm" (ngSubmit)="updateAnimalType()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="typeId" formControlName="typeId" placeholder="Enter animal type ID">
-                <label for="typeId">ID</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Update an Animal type
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="updateForm" (ngSubmit)="updateAnimalType()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="typeId" formControlName="typeId"
+                                placeholder="Enter animal type ID">
+                            <label for="typeId">ID</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="text" class="form-control" id="type" formControlName="type"
+                                placeholder="Enter animal type">
+                            <label for="type">type</label>
+                        </div>
+                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="updatedAnimalType">
+                        <div class="card-header">id: {{updatedAnimalType.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">type: {{updatedAnimalType.type}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating my-3">
-                <input type="text" class="form-control" id="type" formControlName="type" placeholder="Enter animal type">
-                <label for="type">type</label>
-            </div>
-            <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="updatedAnimalType">
-            <div class="card-header">id: {{updatedAnimalType.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">type: {{updatedAnimalType.type}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Delete an Animal type</h3>
-        <form [formGroup]="deleteForm" (ngSubmit)="deleteAnimalType()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="typeId" formControlName="typeId" placeholder="Enter animal type ID">
-                <label for="typeId">ID</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    Delete an Animal type
+                </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="deleteForm" (ngSubmit)="deleteAnimalType()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="typeId" formControlName="typeId"
+                                placeholder="Enter animal type ID">
+                            <label for="typeId">ID</label>
+                        </div>
+                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <div class="alert alert-success mt-3" role="alert" *ngIf="isAnimalTypeDeleted">
+                            Animal has been deleted!
+                        </div>
+                    </form>
+                </div>
             </div>
-            <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-            <div class="alert alert-success mt-3" role="alert" *ngIf="isAnimalTypeDeleted">
-                Animal has been deleted!
-            </div>
-        </form>
+        </div>
     </div>
 </div>
